fixed overflow issue on phone screens

--- a/src/styles_output.css
+++ b/src/styles_output.css
@@ -859,9 +859,10 @@ video {
   background-repeat: no-repeat;
 }
 
-body {
+html, body {
   height: 100vh;
   overflow: hidden;
+  position: relative;
   background: radial-gradient(at top, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 }
 
